# pyDIWASP

./: .gitignore  CHANGES_SUMMARY.md  CONTRIBUTING.md  MANIFEST.in  README.md  TESTING.md  __init__.py  dirspec.py  infospec.py  interpspec.py  plotspec.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  writespec.py
.github/instructions/: *.instructions.md
.github/workflows/: README.md  ci.yml  publish.yml
docs/: README.md  conf.py  examples.rst  index.rst  installation.rst  license.rst  quickstart.rst  references.rst  requirements.txt
docs/api/: dirspec.rst  index.rst  infospec.rst  interpspec.rst  plotspec.rst  writespec.rst
docs/developer/: contributing.rst  structure.rst
docs/user_guide/: estimation_methods.rst  index.rst  instrument_types.rst  troubleshooting.rst  understanding_spectra.rst
examples/: pyDIWASP_example.ipynb  test_notebook.py
private/: BDM.py  EMEP.py  IMLM.py  __init__.py  accs.py  check_data.py  diwasp_csd.py  pres.py  slpx.py  slpy.py  smoothspec.py  spectobasis.py  vels.py  velx.py  vely.py  velz.py  wavenumber.py
pydiwasp/: __init__.py  dirspec.py  infospec.py  interpspec.py  plotspec.py  writespec.py
pydiwasp/private/: BDM.py  DFTM.py  EMEP.py  EMLM.py  __init__.py  check_data.py  diwasp_csd.py  elev.py  hsig.py  pres.py  smoothspec.py  spectobasis.py  vels.py  velx.py
tests/: __init__.py  test_api.py  test_core.py  test_integration.py
